# len

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.conf  README.md  build.rs  kernel.ld  rust-toolchain.toml
.cargo/: config.toml
drivers/: timer-clint.c  timer.c
fdt/: libfdt.h
firmware/: Makefile  firmware.c  link.ld  start.S
include/len/: bit.h  config.h  csr.h  defs.h  dtb.h  file.h  fs.h  hart.h  internal.h  kernel.h  libfdt.h  libfdt_env.h  mm.h  mm_param.h  printk.h  riscv.h  sbi.h  spinlock.h  string.h  timer.h
kernel/: config.h  dtb.c  entry.S  error.rs  hart.c  internal.h  kernel.ld  main.c  main.rs  mm.h  printk.c  riscv.h  sbi.c  spinlock.c  start.S  start.c  timer.c  trap.S  trap_handler.c
kernel/arch/: mod.rs
kernel/arch/riscv64/: mod.rs  riscv64.ld
kernel/arch/riscv64/boot/: mod.rs  start.S
kernel/arch/riscv64/memory/: mod.rs  pagetables.rs
kernel/drivers/: mod.rs  tty.c
kernel/fs/: mod.rs
kernel/memory/: address.rs  bmalloc.rs  mod.rs  page.rs  region.rs
kernel/sync/: mod.rs  spinlock.rs
lib/: bit.c  string.c
mem/: font_vga_8x16.mem  program.mem
mm/: mm.c
rtl/: len.v  mmu.v  picorv32.v  ram.v  uart.v  vga.v
scripts/: qemu_runner.sh
usertest/: Cargo.toml
