[workspace]
members = ["usertest"]

[package]
name = "len"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "len"
path = "kernel/main.rs"

[dependencies]
thiserror = { version = "2.0.18", default-features = false }
bitflags = { version = "2.11.0" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.16.0"
sbi-rt = "0.0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
